# msu-testcase

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
src/tasks/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py
src/users/: serializers.py  views.py
